<?xml version="1.0"?>
<package format="2">
  <name>ads_gflags</name>
  <version>2.0.0</version>
  <description>ads gflags defination</description>
  <maintainer email="wuhaisheng@trunk.tech">wuhaisheng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pkg_config</build_depend>
</package>
