<?xml version="1.0"?>
<package format="2">
  <name>chassis</name>
  <version>2.0.0</version>
  <description>The chassis_net_vcu_all package</description>
  <maintainer email="hebei@trunk.tech">hebei</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>pnc_msgs</depend>
  <depend>pncc_msgs</depend>
  <depend>ads_msgs</depend>

</package>
