<?xml version="1.0"?>
<package format="2">
  <name>ins550_driver</name>
  <version>1.0.0</version>
  <description>The ins550_driver package</description>
  <maintainer email="lifeiqi@todo.todo">lifeiqi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>gnss_msgs</depend>
  <depend>geodesy</depend>
 
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
