<?xml version="0.9"?>
<package format="2">
  <name>lego_loam</name>
  <version>0.9.0</version>
  <description>LeGO-LOAM from IROS 2018</description>

  <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>

  <license>BSD</license>

  <author >Tixiao Shan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>ros_bridge</build_depend>
  <exec_depend>ros_bridge</exec_depend>
  
  <build_depend>tf</build_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>pcl_conversions</build_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>cloud_msgs</build_depend>
  <exec_depend>cloud_msgs</exec_depend>
  <build_depend>sensors_msgs</build_depend>
  <exec_depend>sensors_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>image_transport</build_depend>
  <exec_depend>image_transport</exec_depend>
  
  <build_depend>gtsam</build_depend>
  <exec_depend>gtsam</exec_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <build_depend>hadmap_msgs</build_depend>
  <exec_depend>hadmap_msgs</exec_depend>

  <build_depend>gnss_msgs</build_depend>
  <exec_depend>gnss_msgs</exec_depend>
  
  <build_depend>mrpt</build_depend>
  <exec_depend>mrpt</exec_depend>

  <depend>localization_msgs</depend>
  <depend>pncc_msgs</depend>
</package>
