<?xml version="1.0"?>
<package format="2">
  <name>localization_msgs</name>
  <version>2.0.0</version>
  <description>localization ros msgs package</description>
  <maintainer email="zhaoxuejiang@trunk.tech">zhaoxuejiang</maintainer>
  <license>None</license>

  <!-- buildtool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- build, export, and execution dependencies -->
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!-- build dependencies -->
  <build_depend>message_generation</build_depend>

  <!-- execution dependencies -->
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
