<?xml version="1.0"?>
<package format="2">
  <name>pnc_msgs</name>
  <version>2.0.0</version>
  <description>The planning and control msgs package</description>
  <maintainer email="liuyi@trunk.tech">liuyi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pncc_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
