<?xml version="1.0"?>
<package format="2">
  <name>tracker</name>
  <version>2.0.2</version>
  <description>The tracker package</description>
  <maintainer email="yangjun@trunk.tech">yangjun</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>ads_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tos_msgs</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
